--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
 		"classmap": [
 			"app/commands",
 			"app/controllers",
+			"app/libraries",
 			"app/models",
 			"app/database/migrations",
 			"app/database/seeds",
